--- a/Vimas/Areas/HocVien/Views/BienBan/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/BienBan/Edit.cshtml
@@ -34,7 +34,7 @@
                                 <span class="btn btn-primary btn-file m-r-10 waves-effect">
                                     <span class="fileinput-new">Lựa hình</span>
                                     <span class="fileinput-exists">Đổi</span>
-                                    <input type="hidden"><input type="file" name="SelectedHinhAnh" id="SelectedHinhAnh" accept="image/x-png, image/jpeg">
+                                    <input type="hidden"><input type="file" name="SelectedHinhAnh" id="SelectedHinhAnh" />
                                 </span>
                             </div>
                         </div>
