--- a/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Detail.cshtml
@@ -212,8 +212,22 @@
             },
             "aoColumnDefs": [
                 {
-                    "aTargets": [0, 1, 2, 3],
+                    "aTargets": [0, 1, 2],
                     "bSortable": false
+                },
+                {
+                    "aTargets": [3],
+                    "mRender": function (data, type, o) {
+                        var status = "";
+                        var data = o[3];
+                        status += ($('<span/>', {
+                            'class': 'badge',
+                            'style': 'background-color: #009FFF!important;',
+                            html: data,
+                            'data-id': data
+                        })[0].outerHTML);
+                        return status;
+                    }
                 },
                 {
                     "aTargets": [4],
