Thêm menu cho Biên Bản và fix bux cho Thông tin về nước

--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -948,8 +948,8 @@
                 id: idTTVN,
             },
             success: function (result) {
-                $('#editTTGDPanel').html(result);
-                $('#editTTGDPanel').modal('show');
+                $('#editTTVNPanel').html(result);
+                $('#editTTVNPanel').modal('show');
             },
             error: function (error) {
                 swal('Lỗi', error.message, 'error');
