Add change password

--- a/Vimas/Views/Account/ChangePassword.cshtml
+++ b/Vimas/Views/Account/ChangePassword.cshtml
@@ -1,12 +1,18 @@
-﻿@model RegisterViewModel
+﻿@model Vimas.Models.RegisterViewModel
+
 @{
+    ViewBag.Title = "ChangePassword";
     Layout = null;
 }
+
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
         <form id="editAccountForm" method="post" action="@Url.Action("Edit","TaiKhoan")">
             @Html.AntiForgeryToken()
+            @Html.HiddenFor(q => q.Email)
+            @Html.HiddenFor(q => q.Username)
+            @Html.HiddenFor(q => q.RoleName)
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Sửa thông tin tài khoản</h4>
@@ -14,25 +20,9 @@
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        @Html.LabelFor(q => q.Email, new { @class = "control-label col-md-4" })
-                        <div class="col-md-5">
-                            @Html.TextBoxFor(q => q.Email, new { @class = "form-control col-sm-12" })
-                            @Html.ValidationMessageFor(q => q.Email)
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(q => q.Username, new { @class = "control-label col-md-4" })
-                        <div class="col-md-5">
-                            @Html.TextBoxFor(q => q.Username, new { @class = "form-control col-sm-12",@readonly="true" })
-                            @Html.ValidationMessageFor(q => q.Username)
-                        </div>
-                    </div>
-
-                    <div class="form-group">
                         @Html.LabelFor(q => q.Password, new { @class = "control-label col-md-4" })
                         <div class="col-md-5">
-                            @Html.TextBoxFor(q => q.Password, new { @class = " form-control col-sm-12", @type = "password"})
+                            @Html.TextBoxFor(q => q.Password, new { @class = " form-control col-sm-12", @type = "password" })
                             @Html.ValidationMessageFor(q => q.Password)
                         </div>
                     </div>
@@ -43,18 +33,11 @@
                             @Html.ValidationMessageFor(q => q.ConfirmPassword)
                         </div>
                     </div>
-                    <div class="form-group">
-                        @Html.LabelFor(q => q.RoleName, new { @class = "control-label col-md-4" })
-                        <div class="col-md-5">
-                            @Html.DropDownListFor(q => q.RoleName, this.Model.AvailableRoles, new { @class = "form-control col-sm-12" })
-                            @Html.ValidationMessageFor(q => q.RoleName)
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
-                <input type="button" id="btnSubmit" onclick="editAccount()" value="Lưu" class="btn btn-primary" />
+                <input type="button" id="btnSubmit" onclick="changePassword()" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -64,25 +47,24 @@
     $(document).ready(function () {
         $('#ConfirmPassword').val("@this.Model.Password");
         var form = $('#editAccountForm')
-            .removeData("validator") /* added by the raw jquery.validate plugin */
-            .removeData("unobtrusiveValidation");  /* added by the jquery unobtrusive plugin */
+        .removeData("validator") /* added by the raw jquery.validate plugin */
+        .removeData("unobtrusiveValidation");  /* added by the jquery unobtrusive plugin */
 
         $.validator.unobtrusive.parse(form);
     })
 
-    function editAccount() {
+    function changePassword() {
         var form = $('#editAccountForm');
         $.validator.unobtrusive.parse(form);
         var formData = $('#editAccountForm').serialize();
         if (form.valid()) {
             $.ajax({
                 type: "POST",
-                url: '@Url.Action("Edit","TaiKhoan")',
+                url: '@Url.Action("ChangePassword","Account",new { area = "" })',
                 data: formData,
                 success: function (result) {
-                    swal("Chỉnh sửa", result.message, "success");
-                    $('#editAccountModal').modal('hide');
-                    RefreshTable('taiKhoanDatatable');
+                    swal("Đổi mật khẩu", result.message, "success");
+                    $('#changePasswordPanel').modal('hide');
                 },
                 error: function (error) {
                     swal('Lỗi', error.message, 'error');
