--- a/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Edit.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinDuTuyen/Edit.cshtml
@@ -89,7 +89,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-4">Anh chị đăng ký ở Vimas</label>
                             <div class="col-md-8">
-                                @Html.TextBoxFor(q => q.AnhChiDangKyOVimas, new { @class = " form-control col-sm-12", @placeholder = "Chỉ chấp nhận số" })
+                                @Html.TextBoxFor(q => q.AnhChiDangKyOVimas, new { @class = " form-control col-sm-12" })
                             </div>
                         </div>
                         <div class="form-group">
@@ -163,21 +163,6 @@
         $.validator.unobtrusive.parse(form);
         initializeDateRangePicker();
 
-        $('input[name="AnhChiDangKyOVimas"]').keydown(function (e) {
-            // Allow: backspace, delete, tab, escape, enter
-            if ($.inArray(e.keyCode, [46, 8, 9, 27, 13, 110]) !== -1 ||
-                // Allow: Ctrl+A, Command+A
-                (e.keyCode === 65 && (e.ctrlKey === true || e.metaKey === true)) ||
-                // Allow: home, end, left, right, down, up
-                (e.keyCode >= 35 && e.keyCode <= 40)) {
-                // let it happen, don't do anything
-                return;
-            }
-            // Ensure that it is a number and stop the keypress
-            if ((e.shiftKey || (e.keyCode < 48 || e.keyCode > 57)) && (e.keyCode < 96 || e.keyCode > 105)) {
-                e.preventDefault();
-            }
-        });
     })
 
     function editTTDT() {
