Fix bug cho Thông tin cá nhân detail và làm systemlog cho các bảng sau: BangCap, BienBan, CtyChungNghe, CtyTiepNhan, DOLAB, KTX. Hoàn thiện Systemlog cho ThongTinNopTien

--- a/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyTiepNhan/Index.cshtml
@@ -29,10 +29,10 @@
                 <thead style="white-space: nowrap; text-overflow: ellipsis;">
                     <tr>
                         <th>
-                            <label class="">Tên tiếng việt</label>
+                            <label class="">Tên tiếng Nhật</label>
                         </th>
                         <th>
-                            <label class="">Tên tiếng anh</label>
+                            <label class="">Tên tiếng Anh</label>
                         </th>
                         <th>
                             <label class="">Ngành nghề</label>
