--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Create.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Create.cshtml
@@ -15,7 +15,7 @@
             @Html.AntiForgeryToken()
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Thêm QTHT</h4>
+                <h4 class="modal-title">Thêm hợp đồng DOLAB</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
