Finish system log và fix bug minor cho Systemlog index. Chỉnh role cho thông tin về nước (Trong file Detail của ThongTinCaNhan)

--- a/Vimas/Areas/Admin/Views/SystemLog/Index.cshtml
+++ b/Vimas/Areas/Admin/Views/SystemLog/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SystemLogViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "System Log";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
