add export excel fix minor bugs add GetAttribute for Enum in utils

--- a/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Detail.cshtml
@@ -150,6 +150,8 @@
 
 <script>
     $(document).ready(function () {
+        moment.locale('vi');
+
         @if(this.Model.NgayKhamDot1.GetValueOrDefault().ToShortDateString().Equals("01/01/0001")){
             @:$('#NgayKhamDot1').val("");
         }else{
