--- a/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
+++ b/Vimas/Areas/HocVien/Views/SucKhoe/Index.cshtml
@@ -122,7 +122,7 @@
 
             ],
             "bAutoWidth": false
-        });
+        }).fnSetFilteringDelay(delaySearchDb);
     }
 
     function Delete(id) {
