--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -8,15 +8,22 @@
 <div class="card">
     <div class="card-header">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <h3>Danh sách Công ty chứng nghề</h3>
             </div>
             @if (user.IsInRole("Admin") || user.IsInRole("PhongXKLD"))
             {
-                <div class="col-md-4">
-                    <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
-                        <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm công ty chứng nghề
-                    </a>
+                <div class="col-md-6">
+                    <div class="col-md-6">
+                        <button class="btn btn-primary" type="submit" id="btnExport">
+                            <i class="left-icon fa fa-download"></i>   Xuất ra Excel
+                        </button>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right">
+                            <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm công ty chứng nghề
+                        </a>
+                    </div>
                 </div>
             }
         </div>
@@ -54,8 +61,14 @@
             </table>
         </div>
     </div>
+    <form class="hidden" id="exportForm" action="@Url.Action("ExportExcel", "CongTyChungNghe")"></form>
 </div>
 <script>
+
+    $('#btnExport').on('click', null, function () {
+        $('#exportForm').submit();
+    });
+
     $(document).ready(function () {
         InitOrderDatatable();
     });
