Fix css for select2

--- a/Vimas/Areas/HocVien/Views/ThongTinNopTien/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinNopTien/Create.cshtml
@@ -4,6 +4,12 @@
     Layout = null;
 }
 
+<style>
+    .select2-container{
+        width: 100% !important;
+    }
+</style>
+
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
         <form id="createThongTinNopTienForm" method="post">
