--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Create.cshtml
@@ -224,6 +224,14 @@
                         <hr />
                         <div class="border-all">
                             <div class="form-group first-row">
+                                <label class="control-label col-md-5" for="DiaChiLienLac">Hộ khẩu</label>
+                                <div class="col-md-6">
+                                    <div class="fg-line">
+                                        @Html.TextBoxFor(q => q.HoKhau, new { @class = "form-control" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group first-row">
                                 <label class="control-label col-md-5" for="DiaChiLienLac">Địa chỉ liên lạc</label>
                                 <div class="col-md-6">
                                     <div class="fg-line">
